--- a/angular/src/styles.sass
+++ b/angular/src/styles.sass
@@ -1,8 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+html
+  font-size: 14px
 body
   background-color: #f2f2f2
-  font-size: 14px
 ul
   list-style: none
   margin: 0
   padding: 0
+
+
+
