--- a/angular/src/app/base-elements/form/form-field/form-date-time-picker/form-date-time-picker.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-date-time-picker/form-date-time-picker.component.html
@@ -1,3 +1,42 @@
-<p>
-  form-datetimepicker works!
-</p>
+<div class="datepicker">
+  <div class="datepicker__header">
+    <div class="datepicker__today__month"
+         (click)="clickMonth()">
+      {{getCurrentMonth()}}
+    </div>
+    <div class="datepicker__today__year">
+      {{getCurrentYear()}}
+    </div>
+    <div class="datepicker__month_previous"
+         (click)="previousClick()"
+    >&#60;</div>
+    <div class="datepicker__month_next"
+         (click)="nextClick()"
+    >&#62;</div>
+  </div>
+  <table class="datepicker__days">
+    <thead class="datepicker__days__header">
+    <tr class="datepicker__days__header__row__item">
+      <th *ngFor="let dayOfWeek of daysOfWeek"
+          class="datepicker__days__header__row__item">
+        {{dayOfWeek}}
+      </th>
+    </tr>
+    </thead>
+    <tbody class="datepicker__days__body"
+           appCellActive
+           [selectCell]="selectedCell"
+           [initialDate]="initialDate"
+           [allCells]="cellsDay">
+    <tr *ngFor="let rows of calendarMatrix" class="datepicker__days__body__row">
+      <td *ngFor="let cell of rows" class="datepicker__days__body__row__item">
+          <span class="datepicker__days__body__row__cell"
+                #cellDay
+                [ngClass]="{'datepicker__days__body__row__cell_active' : checkActiveDate(cell)}"
+                (click)="selectDay(cellDay, cell)"
+                >{{cell}}</span>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
