--- a/angular/src/app/base-elements/form/form-field/form-input/form-input.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-input/form-input.component.html
@@ -1,12 +1,12 @@
 <div class="form__field"
      [formGroup]="group">
   <label class="form__field__label"
-         [@focusBlurFormLabel]="stateLabel()"
-          >{{ formField.label }}</label>
+         [(appFormLabelFocusFilled)]="isFocus"
+         [inputValue]="inputValue"
+  >{{ formField.label }}</label>
   <input class="form__field__input"
          [formControlName]="formField.nameField"
-         appFormFieldActive
-         [@focusBlurFormInput]="formFieldState.isActive ? 'focus' : 'blur'"
-         [(formFieldActive)]="formFieldState"
+         [(appFormFieldFocus)]="isFocus"
+         [(ngModel)]="inputValue"
          type="text"/>
 </div>
