--- a/angular/src/app/base-elements/form/form-field/form-radio/form-radio.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-radio/form-radio.component.html
@@ -1,3 +1,13 @@
-<p>
-  form-radio works!
-</p>
+<div *ngFor="let option of formField.options; let i = index" class="form__field"
+     [formGroup]="group">
+  <input class="form__field__radio"
+         id="{{option.label + i}}"
+         [attr.name]="formField.nameField"
+         [formControlName]="formField.nameField"
+         [value]="option.value"
+         type="radio"/>
+  <label class="form__field__label"
+         for="{{option.label + i}}"
+  >{{ option.label }}</label>
+</div>
+
