--- a/angular/src/app/base-elements/form/form-field/form-checkbox/form-checkbox.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-checkbox/form-checkbox.component.html
@@ -1,3 +1,13 @@
-<p>
-  form-checkbox works!
-</p>
+<div *ngFor="let option of formField.options; let i = index" class="form__field"
+     [formGroup]="group">
+  <input class="form__field__checkbox"
+         id="{{option.label + i}}checkbox"
+         [attr.name]="formField.nameField"
+         [formControlName]="formField.nameField"
+         [value]="option.value"
+         type="checkbox"/>
+  <label class="form__field__label"
+         for="{{option.label + i}}checkbox"
+  >{{ option.label }}</label>
+</div>
+
