--- a/angular/src/app/base-elements/form/form-field/form-drop-down-list/form-drop-down-list.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-drop-down-list/form-drop-down-list.component.html
@@ -1,3 +1,17 @@
-<p>
-  form-select works!
-</p>
+<div class="form__field"
+     [formGroup]="group">
+  <label class="form__field__label"
+         [(appFormLabelFocusFilled)]="isFocus"
+         [inputValue]="inputValue"
+  >{{ formField.label }}</label>
+  <input class="form__field__input"
+         [formControlName]="formField.nameField"
+         [(appFormFieldFocus)]="isFocus"
+         [(ngModel)]="inputValue"
+         type="text"/>
+  <div *ngFor="let option of formField.options">
+    <div>
+      {{option.label}}
+    </div>
+  </div>
+</div>
