--- a/angular/src/app/layout/layout.component.html
+++ b/angular/src/app/layout/layout.component.html
@@ -7,6 +7,6 @@
     </div>
   </div>
   <div class="layout__right">
-    <app-tab><app-form-builder></app-form-builder></app-tab>
+    <app-tab><app-form-builder (submitForm)="submitData($event)"></app-form-builder></app-tab>
   </div>
 </div>
