--- a/angular/src/app/base-elements/form/form-builder/form-builder.component.sass
+++ b/angular/src/app/base-elements/form/form-builder/form-builder.component.sass
@@ -1,3 +1,11 @@
 @import '../../../../assets/color-variables'
 .form /deep/ .form__field_active
   border-bottom: 1px solid $base-color
+.next_section
+  background-color: #8e44ac
+.form
+  display: inline-flex
+  flex-flow: column
+  height: 300px
+  flex-wrap: wrap
+  width: 810px
