--- a/angular/src/app/tab/tab.component.sass
+++ b/angular/src/app/tab/tab.component.sass
@@ -4,6 +4,10 @@
     &__item
       padding: 10px 15px
       background-color: white
+      border: 1px solid #cccecf
+      margin-right: -1px
+      border-bottom: 0
   &__body
     background-color: white
-    padding: 20px
+    padding: 40px
+    border: 1px solid #cccecf
