--- a/angular/src/app/base-elements/form/form-field/form-drop-down-list/form-drop-down-list.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-drop-down-list/form-drop-down-list.component.html
@@ -1,17 +1,13 @@
-<div class="form__field"
-     [formGroup]="group">
-  <label class="form__field__label"
-         [(appFormLabelFocusFilled)]="isFocus"
-         [inputValue]="inputValue"
-  >{{ formField.label }}</label>
-  <input class="form__field__input"
-         [formControlName]="formField.nameField"
-         [(appFormFieldFocus)]="isFocus"
-         [(ngModel)]="inputValue"
-         type="text"/>
-  <div *ngFor="let option of formField.options">
-    <div>
-      {{option.label}}
-    </div>
-  </div>
-</div>
+  <app-input
+      #input
+      [group]="group"
+      [formField]="formField"
+      [forceActive]="forceActive"
+      (isFocusChange)="focusChanged($event)">
+    <ul class="options" *appShowDropDownList="isShow">
+      <li class="options__item" *ngFor="let option of formField.options">
+        <span class="options__item__label" (click)="chooseOption(option.label)">{{option.label}}</span>
+        <span class="options__item__value">{{option.value}}</span>
+      </li>
+    </ul>
+  </app-input>
