--- a/angular/src/app/base-elements/form/form-field/form-input/form-input.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-input/form-input.component.html
@@ -1,12 +1,18 @@
 <div class="form__field"
+     appInputOutside
      [formGroup]="group">
   <label class="form__field__label"
-         [(appFormLabelFocusFilled)]="isFocus"
+         [appFormLabelFocusFilled]="isFocus"
          [inputValue]="inputValue"
+         [attr.for]="formField.nameField"
   >{{ formField.label }}</label>
   <input class="form__field__input"
          [formControlName]="formField.nameField"
-         [(appFormFieldFocus)]="isFocus"
+         [appFormFieldFocus]="isFocus"
+         (appFormFieldFocusChange)="focusChanged($event)"
+         [forceActive]="forceActive"
          [(ngModel)]="inputValue"
+         [attr.id]="formField.nameField"
          type="text"/>
+  <ng-content></ng-content>
 </div>
