--- a/angular/src/app/base-elements/form/form-field/form-input/form-input.component.sass
+++ b/angular/src/app/base-elements/form/form-field/form-input/form-input.component.sass
@@ -1,13 +1,1 @@
-.form__field
-  position: relative
-  &__input
-    outline: 0
-    border: 0
-    border-bottom: 1px solid #d9d9d9
-    margin: 0 0 .8rem 0
-    padding: .6rem 0 .4rem 0
-  &__label
-    position: absolute
-    top: 10px
-    color: #757575
-    transform-origin: 0 100%
+@import '../../../../../assets/form-input-fields'
