--- a/angular/src/app/tab/tab.component.html
+++ b/angular/src/app/tab/tab.component.html
@@ -1,9 +1,7 @@
 <div class="tab">
   <ul class="tab__header">
-    <li class="tab__header__item">Base</li>
-    <li class="tab__header__item">Base</li>
-    <li class="tab__header__item">Base</li>
-    <li class="tab__header__item">Base</li>
+    <li class="tab__header__item">Create incidents</li>
+    <li class="tab__header__item">Show incidents</li>
   </ul>
   <div class="tab__body">
     <ng-content></ng-content>
