--- a/angular/src/styles.sass
+++ b/angular/src/styles.sass
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 html
   font-size: 14px
+  color: #313131
+  font-family: Roboto, sans-serif
 body
   background-color: #f2f2f2
 ul
@@ -8,5 +10,10 @@ ul
   margin: 0
   padding: 0
 
+@font-face
+  font-family: 'Roboto'
+  src: url('./fonts/Roboto.woff2') format('woff2'), url('./fonts/Roboto.woff') format('woff')
+  font-weight: normal
+  font-style: normal
 
 
