--- a/angular/src/app/base-elements/form/form-field/form-date-picker/form-date-picker.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-date-picker/form-date-picker.component.html
@@ -2,8 +2,7 @@
   <app-input
     [group]="group"
     [formField]="formField"
-    [forceActive]="isShow"
-    (click)="clickHandler()">
+    (click)="clickHandler($event)">
   </app-input>
   <app-date-picker
     *appShowDatePicker="isShow"></app-date-picker>
