--- a/angular/src/assets/form-input-fields.sass
+++ b/angular/src/assets/form-input-fields.sass
@@ -1,3 +1,4 @@
+@import "../assets/color-variables"
 .form__field
   position: relative
   display: inline-block
@@ -8,6 +9,15 @@
     margin: 0 0 .8rem 0
     padding: .6rem 0 .4rem 0
     width: 300px
+    transition: 0.15s ease-in-out
+    &:focus
+      border-bottom: 1px solid $base-color
+      box-shadow: 0 1px 0 0  $base-color
+      &+label
+        color: $base-color
+        transform: translateY(-18px) scale(0.8)
+    &.filled+label, &.forceFocus+label
+      transform: translateY(-18px) scale(0.8)
   &__label
     position: absolute
     top: 10px
@@ -16,3 +26,4 @@
     left: 0
     cursor: text
     user-select: none
+    transition: 0.2s ease-in-out
