--- a/angular/src/app/base-elements/form/form-field/form-checkbox/form-checkbox.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-checkbox/form-checkbox.component.html
@@ -8,8 +8,9 @@
            [value]="option.value"
            type="checkbox"/>
     <label class="form__field__label"
-           for="{{option.label + i}}checkbox"
-    >{{ option.label }}</label>
+           for="{{option.label + i}}checkbox" >
+      <app-svg class="form__field__done" [svgIcon]="'done'"></app-svg>
+      {{ option.label }}</label>
   </div>
 </div>
 
