--- a/angular/src/app/base-elements/form/form-field/form-input/form-input.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-input/form-input.component.html
@@ -11,5 +11,5 @@
          type="text"/>
   <label class="form__field__label"
          [attr.for]="formField.nameField"
-  >{{ formField.label }}</label>
+  >{{ formField.showProperties.label }}</label>
 </div>
