Datepicker, form fields

--- a/angular/src/app/base-elements/date-picker/date-picker.component.sass
+++ b/angular/src/app/base-elements/date-picker/date-picker.component.sass
@@ -6,7 +6,7 @@
   background-color: #fff
   padding: 17px
   box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.1), 0 1px 7px 0 rgba(0, 0, 0, 0.1)
-  top: 35px
+  top: 38px
   user-select: none
   &__header
     display: flex
@@ -22,7 +22,7 @@
     justify-content: space-between
   &__days__header__row__item
     font-size: 13px
-    color: $base-color
+    color: $primary-color
     font-weight: 400
     text-align: center
   &__body
@@ -60,4 +60,4 @@
   transition: 0.15s ease-in-out
   &:hover
     opacity: 1
-    fill: $base-color
+    fill: $primary-color
