--- a/angular/src/app/base-elements/form/form-field/form-drop-down-list/form-drop-down-list.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-drop-down-list/form-drop-down-list.component.html
@@ -7,8 +7,11 @@
     [formField]="formField"
     (formFieldFocusChanged)="focusChangeEvent($event)"
   ></app-input>
-  <div class="options" [ngClass]="{active: isShow, inactive: !isShow}">
-    <a tabindex="0" class="options__item" *ngFor="let option of formField.options; let i = index"
+  <div class="options"
+       [appHasScroll]="formField.options"
+       [ngClass]="
+       { active: isShow, inactive: !isShow }">
+    <a class="options__item" *ngFor="let option of formField.options; let i = index"
        (click)="chooseOption(option.label)">
       {{option.label}}
     </a>
