--- a/angular/src/assets/color-variables.sass
+++ b/angular/src/assets/color-variables.sass
@@ -1,3 +1,7 @@
-$base-color: #8e44ac
-$base-light-color: #c073de
-$base-dark-color: #5e137c
+$primary-color: #8e44ac
+$primary-light-color: #c073de
+$primary-dark-color: #5e137c
+
+$secondary-color: #f29812
+$secondary-light-color: #ffc94d
+$secondary-dark-color: #ba6a00
