--- a/angular/src/app/base-elements/form/form-container/form-container.component.html
+++ b/angular/src/app/base-elements/form/form-container/form-container.component.html
@@ -1,5 +1,6 @@
-<app-form-builder
-  (submitForm)="submitData($event)"
-  [schemaUrl]="schemaUrl()"
-  [dataUrl]="dataUrl()"
-></app-form-builder>
+<ng-template #loading>Loading...</ng-template>
+<app-dynamic-form *ngIf="isLoaded; else loading"
+              [schema]="schema"
+              [group]="group"
+              (submit)="submit($event)"
+></app-dynamic-form>
