--- a/angular/src/app/base-elements/form/form-field/form-checkbox/form-checkbox.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-checkbox/form-checkbox.component.html
@@ -1,16 +1,19 @@
 <div class="form__field"
      [formGroup]="group">
-  <div class="form__field__item" *ngFor="let option of formField.options; let i = index">
-    <input class="form__field__checkbox"
-           id="{{option.label + i}}checkbox"
-           [attr.name]="formField.nameField"
-           [formControlName]="formField.nameField"
-           [value]="option.value"
-           type="checkbox"/>
-    <label class="form__field__label"
-           for="{{option.label + i}}checkbox" >
-      <app-svg class="form__field__done" [svgIcon]="'done'"></app-svg>
-      {{ option.label }}</label>
+  <div class="form__field__items">
+    <div class="form__field__item">
+      <input class="form__field__checkbox"
+             id="{{formField.nameField}}checkbox"
+             [attr.name]="formField.nameField"
+             [formControlName]="formField.nameField"
+             [checked]="formControl.value"
+             type="checkbox"/>
+      <label class="form__field__label"
+             for="{{formField.nameField}}checkbox" >
+        <app-svg class="form__field__done" [svgIcon]="'done'"></app-svg>
+        {{formField.showProperties.label}}</label>
+    </div>
   </div>
+  <app-form-error [appFormControl]="formControl"></app-form-error>
 </div>
 
