--- a/angular/src/app/base-elements/form/form-field/form-date-picker/form-date-picker.component.html
+++ b/angular/src/app/base-elements/form/form-field/form-date-picker/form-date-picker.component.html
@@ -1,9 +1,11 @@
-<div class="datepicker_container" appOutside (outsideEvent)="isShow = $event">
+<div class="datepicker_container" appOutside (outsideEvent)="outsideEvent($event)">
   <app-input
-    [group]="group"
-    [formField]="formField"
-    (click)="clickHandler($event)">
+      #input
+      [group]="group"
+      [formField]="formField"
+      (click)="clickHandler($event)">
   </app-input>
   <app-date-picker
+    (chosenDateChanged)="chooseDate($event)"
     *appShowDatePicker="isShow"></app-date-picker>
 </div>
