--- a/angular/src/app/base-elements/form/form-field/form-drop-down-list/form-drop-down-list.component.sass
+++ b/angular/src/app/base-elements/form/form-field/form-drop-down-list/form-drop-down-list.component.sass
@@ -5,7 +5,7 @@
   position: relative
 .options
   position: absolute
-  top: 32px
+  top: 38px
   z-index: 9999
   border: 1px solid #cccecf
   background-color: #fff
@@ -19,11 +19,13 @@
     color: #313131
     &:hover, &:focus
       outline: none
-      background-color: $base-color
+      background-color: $primary-color
       color: #fff
       cursor: pointer
 .active
   display: block
 .inactive
   display: none
-
+.hasScroll
+  overflow-y: scroll
+  height: 140px
