--- a/angular/src/app/base-elements/form/form-field/submit-button/submit-button.component.html
+++ b/angular/src/app/base-elements/form/form-field/submit-button/submit-button.component.html
@@ -1,3 +1,3 @@
 <div [formGroup]="group">
-  <button>Submit</button>
+  <button class="button button_primary" (click)="submitForm()">Submit</button>
 </div>
