--- a/angular/src/assets/form-input-fields.sass
+++ b/angular/src/assets/form-input-fields.sass
@@ -2,28 +2,34 @@
 .form__field
   position: relative
   display: inline-block
+  margin: .8rem 0 1.5rem 0
   &__input
     outline: 0
     border: 0
     border-bottom: 1px solid #d9d9d9
-    margin: 0 0 .8rem 0
-    padding: .6rem 0 .4rem 0
+    padding: .4rem 0 .3rem 0
     width: 300px
     transition: 0.15s ease-in-out
     &:focus
-      border-bottom: 1px solid $base-color
-      box-shadow: 0 1px 0 0  $base-color
+      border-bottom: 1px solid $primary-color
+      box-shadow: 0 1px 0 0 $primary-color
       &+label
-        color: $base-color
-        transform: translateY(-18px) scale(0.8)
+        color: $primary-color
+        transform: translateY(-21px) scale(0.8)
     &.filled+label, &.forceFocus+label
-      transform: translateY(-18px) scale(0.8)
+      transform: translateY(-21px) scale(0.8)
   &__label
     position: absolute
-    top: 10px
+    top: 6px
     color: #757575
     transform-origin: 0 100%
     left: 0
     cursor: text
     user-select: none
     transition: 0.2s ease-in-out
+
+input.ng-dirty.ng-invalid, input.ng-touched.ng-invalid
+  border-bottom: 1px solid $secondary-dark-color
+  box-shadow: 0 1px 0 0 $secondary-dark-color
+  &+label
+    color: $secondary-dark-color
