--- a/angular/src/styles.sass
+++ b/angular/src/styles.sass
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/color-variables"
 html
   font-size: 14px
   color: #313131
@@ -15,5 +16,13 @@ ul
   src: url('./fonts/Roboto.woff2') format('woff2'), url('./fonts/Roboto.woff') format('woff')
   font-weight: normal
   font-style: normal
+
+::-webkit-scrollbar
+  width: 6px
+  height: 6px
+::-webkit-scrollbar-track
+  background-color: #f2f2f2
+::-webkit-scrollbar-thumb
+  background-color: #8e44ac
 
 
