--- a/angular/src/app/base-elements/grid/grid-container/grid-container.component.html
+++ b/angular/src/app/base-elements/grid/grid-container/grid-container.component.html
@@ -1,5 +1,8 @@
 <ng-template #loading>Loading...</ng-template>
-<app-grid-builder *ngIf="isLoaded; else loading"
+<app-grid-builder
+  *ngIf="isLoaded; else loading"
   [schema]="schema"
   [data]="data"
+  (filtersChanged)="filtersChanged($event)"
+  (rowDeleteEvent)="rowDeleteEvent($event)"
 ></app-grid-builder>
